# webgrab

./: .dev.env.template  .gitignore  .prod.env.template  Dockerfile  README.md  docker-entrypoint.sh  postgres_check.py  start.sh
compose/: docker-compose.prod.yml  docker-compose.yml
dependencies/: pyproject.toml
dependencies/tests/: test_dependencies.py
src/: manage.py  uwsgi.ini
src/url_grabber/: apps.py  models.py  serializers.py  tasks.py  urls.py  urls_html.py  views.py
src/url_grabber/migrations/: 0001_initial.py
src/url_grabber/static/css/: style.css
src/url_grabber/templates/: home.html  list.html
src/webgrab/webgrab_main/: settings.py  wsgi.py
src/webgrab/webgrab_main/management/commands/: dev_celery.py
src/webgrab_main/: celery.py  settings.py  settings_prod.py  urls.py
