[tool.poetry]
name = "dependencies"
version = "0.1.0"
description = ""
authors = ["mccc <mciccozz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
celery = "^4.3"
psycopg2-binary = "^2.8"
boto3 = "^1.9"
djangorestframework = "^3.9"
django-model-utils = "^3.1"
selenium = "^3.141"
requests = "^2.21"
Pillow = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
